--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
     margin: 0;
     padding: 0;
 }
-
 .container-fluid {
     width: 100%;
     heigh: 80px;
     background: linear-gradient(to left, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), :url(file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/bj.jpeg) background-size: cover;
     background-repeat: no-repeat;
+
 }
+.container{
+    }
+
 
 .container {
     width: 1200px;
     height: 80px;
-    background-image:url(file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/cj.jpeg); 
+    background-image:url(file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/cj.jpeg); 
+    heigh: 80px;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -41,7 +45,7 @@
     padding: 0px 25px;
 }
 
-container <h2> {
+.container h2 {
     font-family: arial;
     font-size: 30px;
     color: #fff;
@@ -101,7 +105,8 @@ container <h2> {
     width: 1200px;
     height: 100vh;
     background-color:grey;
-    background_image:url(file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/cj.jpeg);
+    background-image:url(file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/cj.jpeg);
+    background: linear-gradient(to left, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), :url(file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/cj.jpeg) background-size:cover;
     margin: auto;
 }
 
@@ -172,7 +177,7 @@ section ul li .active.a {
     display: flex;
     flex-wrap: wrap;
 }
-.litter .itembox img {
+  .litters.itembox img {
     position: absolute;
     top: 0;
     left: 0;
@@ -184,7 +189,7 @@ section ul li .active.a {
 <body>
     <div class="container-fluid">
       <div class ="container">
-      <h2>Pet Home</h2>
+      <h1>Pet Home</h1>
       <ul>
             <li><a href="index.html" id="onlink">Home</a></li>
             <li><a href="Testimonial.html">Testimonial</a></li>
@@ -194,17 +199,17 @@ section ul li .active.a {
             
       </ul>
       <div class="main_container">
-      <p><b>Call/text Us at</p></b>
+      <h2><p><b>Call/text Us at</p></b></h2>
       </div>
       <div>
         <button class="btn"><ion-icon name="call-outline"></ion-icon>+1(510) 905-8008</button>
     </div>
     </div>
     <div class="content">
+    
         <h1>Groaming & Pets<br>Care</h1>
-        <p>Hello and Welcome to Doodle Rach Puppies!<br> We are a family of three located at New York<br> We strive to keep Christ first as we go through this journey of life!<br> We have been raising high-quality puppies for over 15 years now and we do it with a passion,<br> always making sure our Doodle  puppies get everything they need to stay healthy and in top-notch shape!</p>
-         <button class="btn">mail us</button>
-        <p><b>Location: New York City</b></p>
+        <p><h2>Hello and Welcome to Doodle Rach Puppies!<br> We are a family of three located at New York<br> We strive to keep Christ first as we go through this journey of life!<br> We have been raising high-quality puppies for over 15 years now and we do it with a passion,<br> always making sure our Doodle  puppies get everything they need to stay healthy and in top-notch shape!</p><</h2>
+         <button class="btn">mail us<a href="mailto:Sophiaharrison163@gmail.com">Sophiaharrison163@gmail.com</button>
    </div>
 
 
@@ -213,34 +218,32 @@ section ul li .active.a {
 
 <section>
  <div class="litters">
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p1.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p2.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p3.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p4.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p5.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p6.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p7.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p8.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p10.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/p11.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/r1.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/r2.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/r3.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/r4.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/r6.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/t1.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/t2.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/t3.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/t4.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/t5.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/t6.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/a1.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/a2.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/a3.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/a4.jpeg"width="200" height="200"></div>
-    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/css%20crash%20course/myweb/a5.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p1.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p2.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p3.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p5.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p6.jpeg"width="200" height="200"></div>
+     <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p7.jpeg"width="200" height="200"></div>
+      <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p8.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p10.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/p11.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/r1.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/r2.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/r3.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/r4.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/t1.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/t2.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/t3.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/t4.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/t5.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/t6.jpeg"width="200" height="200"></div>
+     <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/a1.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/a2.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/a3.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/a4.jpeg"width="200" height="200"></div>
+    <div class="itembox"><img src="file:///C:/Users/oluwah/Desktop/eze/myweb/doubles/a5.jpeg"width="200" height="200"></div>
  </div>
  </section> 
-<h4 align="center">CopyRight2022</h4>
+<i><h5 align="center">CopyRight2022</h5></i>
 </body>
 </html>
